# cppcms-skeleton

./: .gitignore  CMakeLists.txt  COPYING.TXT  README.md  config.js
cppcms_skel/contents/: AjaxContent.h  content.h  messages.h
cppcms_skel/contents/forms/: change_interface_langs.h
cppcms_skel/contents/helpers/: current_user.h  helpers.h
cppcms_skel/controllers/generics/: Controller.cpp  Controller.h
cppcms_skel/controllers/webs/: Controller.cpp  Controller.h  Css.cpp  Css.h  Img.cpp  Img.h  Js.cpp  Js.h
cppcms_skel/generics/: Config.cpp  Config.h  Languages.cpp  Languages.h  Singleton.h  test.h
cppcms_skel/models/: Media.cpp  Media.h  README  SqlImporter.cpp  SqlImporter.h  SqliteModel.cpp  SqliteModel.h  Uploads.cpp  Uploads.h  Users.cpp  Users.h
cppcms_skel/results/: README  Uploads.h  Users.h
cppcms_skel/views/: README
cppcms_skel/views/web/: README
locale/: README
src/: @PROJECT_NAME_CODE@.cpp  @PROJECT_NAME_CODE@.h  main.cpp  tatodetect.cpp  tatodetect.h
src/contents/: Config.cpp  Pages.h  content.h
src/contents/code_template/: _action_content_.tpl  _content_include_form.tpl  _controller_content.tpl  _input_content_.tpl
src/contents/forms/: change_interface_langs.h
src/contents/forms/code_template/: _form_.h.tpl
src/controllers/generics/: Controller.cpp  Controller.h
src/controllers/webs/: Controller.cpp  Controller.h  Pages.cpp  Pages.h  addController.py  addMethod.py
src/controllers/webs/template/: _inc_model_ctrl.tpl  _template_.cpp.tpl  _template_.h.tpl  _template_form.tpl  _template_form_dispatcher_.tpl  _template_form_header.tpl  _template_method.tpl  _template_method_dispatcher_.tpl  _template_method_header.tpl
src/generics/: Config.cpp  Config.h  Languages.cpp  Languages.h  README  Singleton.h
src/models/: SqliteModel.cpp  SqliteModel.h
src/models/code_template/: _model_.cpp.tpl  _model_.h.tpl
src/views/web/code_template/: _action_.tpl
src/views/web/layouts/: master.tmpl
src/views/web/pages/: homepage.tmpl
template/: @MAIN_CLASS@.cpp  @MAIN_CLASS@.h  @PROJECT_NAME_CODE@.cpp  @PROJECT_NAME_CODE@.h  CMakeLists.txt  README  config.js  controller_construct.tpl  controller_dispatcher.tpl  controller_header.tpl  controller_header_attr.tpl  main.cpp
template/contents/: Pages.h  README  _action_content_.tpl  _content_include_form.tpl  _controller_content.tpl  _input_content_.tpl
template/contents/forms/: _form_.h.tpl
template/controllers/webs/: Pages.cpp  Pages.h  _class_model_ctrl.tpl  _del_model_ctrl.tpl  _new_model_ctrl.tpl  _template_.cpp.tpl  _template_.h.tpl  _template_action_only.tpl  _template_form_header.tpl  _template_method_header.tpl  _var_model_ctrl.tpl
template/generics/: Config.cpp  Config.h  Languages.cpp  Languages.h  Singleton.h
template/models/: _model_.cpp.tpl  _model_.h.tpl
template/views/webs/: _action_.tpl  _form_action_.tpl
template/views/webs/layouts/: master.tmpl
tests/: bug_insert_create_tables.sql  bug_transaction.sql  config.py  config2.py  models_sqlitemodel_import_sql_file_test.cpp  models_sqlitemodel_import_sql_file_test2.cpp  models_sqlitemodel_import_sql_file_test_correct.sql  models_sqlitemodel_import_sql_file_test_correct_data.sql  models_sqlitemodel_import_sql_file_test_not_correct.sql  models_sqlitemodel_load_db_from_file_test.cpp  models_sqlitemodel_load_db_from_file_test_correct.sql  models_sqlitemodel_load_db_from_file_test_not_correct.sql  test.h  try_to_build_project.sh
tests/include/: test.h
tests/models/SqliteModel/check_existence/: basic.sql  test.cpp
tests/models/SqliteModel/import_sql_file/: bug_insert.sql  test.cpp  test2.cpp  test_not_correct.sql  works_with_trigger_block.cpp  works_with_trigger_block.sql
tests/models/Users/add/: basic.sql  test.cpp
tests/models/Users/by_id/: basic.sql  test.cpp
tests/models/Users/change_password/: basic.sql  test.cpp
tests/models/Users/email_exists/: basic.sql  test.cpp
tests/models/Users/is_admin/: basic.sql  test.cpp
tests/models/Users/is_login_correct/: basic.sql  test.cpp
tests/models/Users/username_exists/: basic.sql  test.cpp
tools/: addActionOnlyPage.py  addController.py  addForm.py  addFormPage.py  addMethod.py  addModel.py  architecture.py  config.py  config.py.example  constants.py  cppcms_tmpl_cc  create_new_cppcmsskel  init.py  linkMethodController.py  linkModelController.py  move_and_rename.py  update_local_template.py  utils.py
